--- a/IngressoMVC/Views/Atores/AtorCriar.cshtml
+++ b/IngressoMVC/Views/Atores/AtorCriar.cshtml
@@ -1,1 +1,25 @@
-﻿<h1>Criar novo ator</h1>
+﻿@model IngressoMVC.Models.ViewModels.Request.PostAtorDTO
+@{ 
+    ViewData["Title"] = "Adicionar Ator";
+}
+<div class="row text-center">
+    <div class="container">
+        <div class="col col-md-8 offset-2">
+            <h1>Criar novo ator</h1>
+        </div>
+        <div class="row">
+            <form asp-action="AtorCriar">
+                <label asp-for="Nome" class="label-control"></label>
+                <input asp-for="Nome" class="form-control">
+                <label asp-for="FotoPerfilURL" class="label-control"></label>
+                <input asp-for="FotoPerfilURL" class="form-control">
+                <label asp-for="Bio" class="label-control"></label>
+                <input asp-for="Bio" class="form-control">
+                <input type="submit" value="Criar" class="btn btn-dark mt-2">
+                <a asp-action="AtorListar" class="btn btn-dark mt-2">Listar</a>
+
+            </form>
+        </div>
+    </div>
+</div>
+
