Validações e primeiro erro B)

--- a/IngressoMVC/Views/Atores/AtorDeletar.cshtml
+++ b/IngressoMVC/Views/Atores/AtorDeletar.cshtml
@@ -1,1 +1,23 @@
-﻿<h1>Delete um ator</h1>
+﻿@model Ator
+@{
+    ViewData["Title"] = "Deletar Ator";
+}
+<div class="row">
+    <div class="container">
+        <div class="col col-md-8 offset-4">
+            <h1>Deletar Ator</h1>
+        </div>
+        <div class="col col-md-4 offset-4 mt-3">
+                <label asp-for="Nome" class="label-control"></label><br>
+                <input placeholder="@Model.Nome" disabled class="label-control"><br>
+                <label asp-for="FotoPerfilURL" class="label-control"></label><br>
+                <img class="img-thumbnail" src="@Model.FotoPerfilURL" width="125" alt="@Model.Nome"><br>
+                <label asp-for="Bio" class="label-control"></label><br>
+                <input disabled placeholder="@Model.Bio" class="label-control"><br>
+                     <form asp-action="AtorConfirmarDeletar" asp-route-id="@Model.Id">
+                         <a asp-action="AtorConfirmarDeletar" class="btn btn-danger mt-2">Deletar</a>
+                    </form>
+                         <a asp-action="AtorListar" class="btn btn-dark mt-1">Listar</a>
+        </div>
+    </div>
+</div>
