--- a/IngressoMVC/Views/Produtores/ProdutorListar.cshtml
+++ b/IngressoMVC/Views/Produtores/ProdutorListar.cshtml
@@ -6,7 +6,7 @@
     <h1>Produtores cadastrados</h1>
 </div>
     <div class="row">
-        <a class="btn btn-dark" href="#">Cadastrar</a>
+        <a class="btn btn-dark" asp-action="ProdutorCriar">Cadastrar</a>
         <input class="form-control col-md-3 offset-7" type="text" name="nome" id="nome" placeholder="Buscar">
     </div>
 <div class="text-center mt-3">
