--- a/IngressoMVC/Views/Atores/AtorCriar.cshtml
+++ b/IngressoMVC/Views/Atores/AtorCriar.cshtml
@@ -7,7 +7,8 @@
         <div class="col col-md-8 offset-2">
             <h1>Criar novo ator</h1>
         </div>
-        <div class="row">
+        <div class="col col-md-4 offset-4 mt-3 row text-danger" asp-validation-summary="All"></div>
+        <div class="col col-md-4 offset-4 mt-3">
             <form asp-action="AtorCriar">
                 <label asp-for="Nome" class="label-control"></label>
                 <input asp-for="Nome" class="form-control">
@@ -17,9 +18,8 @@
                 <input asp-for="Bio" class="form-control">
                 <input type="submit" value="Criar" class="btn btn-dark mt-2">
                 <a asp-action="AtorListar" class="btn btn-dark mt-2">Listar</a>
-
             </form>
         </div>
+        </div>
     </div>
-</div>
 
