--- a/IngressoMVC/Views/Categorias/CategoriaListar.cshtml
+++ b/IngressoMVC/Views/Categorias/CategoriaListar.cshtml
@@ -6,7 +6,7 @@
     <h1>Categorias cadastrados</h1>
 </div>
     <div class="row">
-        <a class="btn btn-dark" href="#">Cadastrar</a>
+        <a class="btn btn-dark" asp-action="CategoriaCriar">Cadastrar</a>
         <input class="form-control col-md-3 offset-7" type="text" name="nome" id="nome" placeholder="Buscar">
     </div>
 <div class="text-center mt-3">
@@ -25,7 +25,6 @@
                         <td>@categoria.Nome</td>
                         <td class="d-flex flex-column col-md-6 offset-3">
                             <a class="btn btn-dark" asp-action="CategoriaAtualizar" asp-route-id="@categoria.Id"><i class="fa-solid fa-pen-to-square"></i> Editar</a>
-                            <a class="btn btn-dark mt-1" asp-action="CategoriaDetalhes" asp-route-id="@categoria.Id"><i class="fa-solid fa-eye"></i> Ver</a>
                             <a class="btn btn-danger mt-1" asp-action="CategoriaDeletar" asp-route-id="@categoria.Id"><i class="fa-solid fa-trash"></i> Excluir</a>
                         </td>
                         </tr>
