--- a/IngressoMVC/Views/Produtores/ProdutorAtualizar.cshtml
+++ b/IngressoMVC/Views/Produtores/ProdutorAtualizar.cshtml
@@ -1,1 +1,36 @@
-﻿<h1>Atualizar um produtor</h1>
+﻿<h1>Atualizar Produtor</h1>
+@model IngressoMVC.Models.Produtor
+
+@{
+    ViewData["Title"] = "Atualizar";
+}
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="ProdutorAtualizar">
+            <input type="hidden" asp-for="Id" />
+            <div>
+                <img class="img-thumbnail" src="@Model.FotoPerfilURL" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Nome" class="control-label"></label>
+                <input asp-for="Nome" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Bio" class="control-label"></label>
+                <input asp-for="Bio" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="FotoPerfilURL" class="control-label"></label>
+                <input asp-for="FotoPerfilURL" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="ProdutoresListar">Lista de Produtores</a>
+</div>
