--- a/IngressoMVC/Views/Produtores/ProdutorDeletar.cshtml
+++ b/IngressoMVC/Views/Produtores/ProdutorDeletar.cshtml
@@ -1,1 +1,36 @@
-﻿<h1>Delete um produtor</h1>
+﻿@model Produtor
+
+@{
+    ViewData["Title"] = "Deletar Ator";
+}
+
+<div class="row text">
+    <div class="col-md-8 offset-2">
+        <p>
+            <h1>Deletar Produtor @Model.Nome</h1>
+        </p>
+        <div class="row">
+            <div class="col-md-8 offset-2">
+                <div class="form-group">
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Bio" class="control-label"></label>
+                    <input asp-for="Bio" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="FotoPerfilURL" class="control-label"></label>
+                    <input asp-for="FotoPerfilURL" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <form asp-action="ProdutorDeletar">
+                        <input type="hidden" asp-for="Id" />
+                        <input type="submit" value="Confirmar" class="btn btn-outline-danger float-right" />
+                    </form>
+                    <a class="btn btn-outline-secondary" asp-action="ProdutorListar">Listar Todos</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
