--- a/IngressoMVC/Views/Atores/AtorAtualizar.cshtml
+++ b/IngressoMVC/Views/Atores/AtorAtualizar.cshtml
@@ -1,17 +1,13 @@
-﻿@model IngressoMVC.Models.Ator
+﻿<h1>Atualizar Ator</h1>
+@model IngressoMVC.Models.Ator
 
 @{
     ViewData["Title"] = "Atualizar";
 }
-
-<h1>Atualizar</h1>
-
-<h4>Ator</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AtorAtualizarConfirmar">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="AtorAtualizar">
             <input type="hidden" asp-for="Id" />
             <div>
                 <img class="img-thumbnail" src="@Model.FotoPerfilURL" />
@@ -19,7 +15,6 @@
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Bio" class="control-label"></label>
@@ -28,15 +23,14 @@
             <div class="form-group">
                 <label asp-for="FotoPerfilURL" class="control-label"></label>
                 <input asp-for="FotoPerfilURL" class="form-control" />
-                <span asp-validation-for="FotoPerfilURL" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary"/>
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="AtorListar">Lista de Atores</a>
+    <a asp-action="AtorListar">Cancelar</a>
 </div>
