--- a/IngressoMVC/Views/Categorias/CategoriaAtualizar.cshtml
+++ b/IngressoMVC/Views/Categorias/CategoriaAtualizar.cshtml
@@ -1,1 +1,24 @@
-﻿<h1>Atualizar uma categoria</h1>
+﻿<h1>Atualizar categoria</h1>
+@model IngressoMVC.Models.Categoria
+
+@{
+    ViewData["Title"] = "Atualizar";
+}
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="CategoriaAtualizar">
+            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Nome" class="control-label"></label>
+                <input asp-for="Nome" class="form-control" /><br>
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+<br>
+<div>
+    <a asp-action="CategoriaListar">Cancelar</a>
+</div>
