--- a/IngressoMVC/Views/Categorias/CategoriaCriar.cshtml
+++ b/IngressoMVC/Views/Categorias/CategoriaCriar.cshtml
@@ -10,8 +10,8 @@
         <div class="col col-md-4 offset-4 row text-danger" asp-validation-summary="All"></div>
         <div class="col col-md-4 offset-4 mt-3">
             <form asp-action="CategoriaCriar">
-                <label asp-for="Categoria" class="label-control"></label>
-                <input asp-for="Categoria" class="form-control">
+                <label asp-for="Nome" class="label-control"></label>
+                <input asp-for="Nome" class="form-control">
                 <input type="submit" value="Criar" class="btn btn-dark mt-2">
                 <a asp-action="CategoriaListar" class="btn btn-dark mt-2">Listar</a>
             </form>
