--- a/IngressoMVC/Views/Categorias/CategoriaDeletar.cshtml
+++ b/IngressoMVC/Views/Categorias/CategoriaDeletar.cshtml
@@ -14,15 +14,15 @@
             <div class="col-md-8 offset-2">
                 <div class="form-group">
                     <label asp-for="Nome" class="control-label"></label>
-                    <input asp-for="Nome" class="form-control" />
+                    <input asp-for="Nome" class="form-control" disabled/>
 
                 </div>
                 <div class="form-group">
-                    <form asp-action="ConfirmarDeletar">
+                    <form asp-action="CategoriaDeletar">
                         <input type="hidden" asp-for="Id" />
                         <input type="submit" value="Confirmar" class="btn btn-outline-danger float-right" />
                     </form>
-                    <a class="btn btn-outline-secondary" asp-action="CategoriaListar">Listar Todos</a>
+                    <a class="btn btn-outline-secondary" asp-action="CategoriaListar">Cancelar</a>
                 </div>
             </div>
         </div>
