--- a/IngressoMVC/Views/Cinemas/CinemaAtualizar.cshtml
+++ b/IngressoMVC/Views/Cinemas/CinemaAtualizar.cshtml
@@ -1,1 +1,36 @@
-﻿<h1>Atualizar um cinema</h1>
+﻿<h1>Atualizar Cinema</h1>
+@model IngressoMVC.Models.Cinema
+
+@{
+    ViewData["Title"] = "Atualizar";
+}
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="CinemaAtualizar">
+            <input type="hidden" asp-for="Id" />
+            <div>
+                <img class="img-thumbnail" src="@Model.LogoURL" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Nome" class="control-label"></label>
+                <input asp-for="Nome" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Descricao" class="control-label"></label>
+                <input asp-for="Descricao" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="LogoURL" class="control-label"></label>
+                <input asp-for="LogoURL" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="CinemaListar">Cancelar</a>
+</div>
