--- a/IngressoMVC/Views/Cinemas/CinemaDeletar.cshtml
+++ b/IngressoMVC/Views/Cinemas/CinemaDeletar.cshtml
@@ -1,1 +1,35 @@
-﻿<h1>Delete um cinema</h1>
+﻿@model IngressoMVC.Models.Cinema
+
+@{
+    ViewData["Title"] = "Deletar Cinema";
+}
+
+<div class="row text">
+    <div class="col-md-8 offset-2">
+        <p>
+            <h1>Deletar Cinema @Model.Nome</h1>
+        </p>
+        <div class="row">
+            <div class="col-md-8 offset-2">
+                <div>
+                <img class="img-thumbnail" src="@Model.LogoURL" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" disabled/>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Descricao" class="control-label"></label>
+                    <input asp-for="Descricao" class="form-control" disabled/>
+                </div>
+                <div class="form-group">
+                    <form asp-action="CinemaConfirmarDeletar">
+                        <input type="hidden" asp-for="Id"/>
+                        <input type="submit" value="Confirmar" class="btn btn-outline-danger float-right" />
+                    </form>
+                    <a class="btn btn-outline-secondary" asp-action="CinemaListar">Listar Todos</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
