--- a/IngressoMVC/Views/Produtores/ProdutorAtualizar.cshtml
+++ b/IngressoMVC/Views/Produtores/ProdutorAtualizar.cshtml
@@ -32,5 +32,5 @@
 </div>
 
 <div>
-    <a asp-action="ProdutoresListar">Lista de Produtores</a>
+    <a asp-action="ProdutorListar">Lista de Produtores</a>
 </div>
