--- a/IngressoMVC/Views/Atores/Deletar.cshtml
+++ b/IngressoMVC/Views/Atores/Deletar.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Deletar Ator";
 }
 
+
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
@@ -11,24 +12,23 @@
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
-                <div>
-                    <img class="img-thumbnail" src="@Model.FotoPerfilURL" />
+                <div class="form-group">
+                    <img src="@Model.FotoPerfilURL" class="img-thumbnail" alt="@Model.Nome" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Nome" class="control-label"></label>
-                    <input asp-for="Nome" class="form-control" disabled/>
+                    <h1>@Model.Nome</h1>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Bio" class="control-label"></label>
-                    <input asp-for="Bio" class="form-control" disabled/>
+                    <h3>@Model.Bio</h3>
                 </div>
                 <div class="form-group">
-                    <form asp-action="AtorConfirmarDeletar">
-                        <input type="hidden" asp-for="Id"/>
+                    <form asp-action="Deletar">
+                        <input type="hidden" asp-for="Id" />
                         <input type="submit" value="Confirmar" class="btn btn-outline-danger float-right" />
                     </form>
-                    <a class="btn btn-outline-secondary" asp-action="AtorListar">Cancelar</a>
+                    <a class="btn btn-outline-secondary" asp-action="Index">Listar Todos</a>
                 </div>
+
             </div>
         </div>
     </div>
