--- a/IngressoMVC/Views/Categorias/Atualizar.cshtml
+++ b/IngressoMVC/Views/Categorias/Atualizar.cshtml
@@ -1,24 +1,29 @@
-﻿<h1>Atualizar categoria</h1>
-@model IngressoMVC.Models.Categoria
+﻿@model IngressoMVC.Models.Categoria
 
 @{
     ViewData["Title"] = "Atualizar";
 }
+
+<h1>Atualizar Categoria</h1>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CategoriaAtualizar">
+        <form asp-action="Atualizar">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" /><br>
+                <input asp-for="Nome" class="form-control" />
+                <span asp-validation-for="Nome" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-<br>
+
 <div>
-    <a asp-action="CategoriaListar">Cancelar</a>
+    <a asp-action="Index">Lista de Categorias</a>
 </div>
