--- a/IngressoMVC/Views/Categorias/Deletar.cshtml
+++ b/IngressoMVC/Views/Categorias/Deletar.cshtml
@@ -13,16 +13,14 @@
         <div class="row">
             <div class="col-md-8 offset-2">
                 <div class="form-group">
-                    <label asp-for="Nome" class="control-label"></label>
-                    <input asp-for="Nome" class="form-control" disabled/>
-
+                    @Html.DisplayNameFor(model => model.Nome)
                 </div>
                 <div class="form-group">
-                    <form asp-action="CategoriaDeletar">
+                    <form asp-action="ConfirmarDeletar">
                         <input type="hidden" asp-for="Id" />
                         <input type="submit" value="Confirmar" class="btn btn-outline-danger float-right" />
                     </form>
-                    <a class="btn btn-outline-secondary" asp-action="CategoriaListar">Cancelar</a>
+                    <a class="btn btn-outline-secondary" asp-action="Index">Listar Todos</a>
                 </div>
             </div>
         </div>
