--- a/IngressoMVC/Views/Cinemas/Atualizar.cshtml
+++ b/IngressoMVC/Views/Cinemas/Atualizar.cshtml
@@ -1,13 +1,17 @@
-﻿<h1>Atualizar Cinema</h1>
-@model IngressoMVC.Models.Cinema
+﻿@model IngressoMVC.Models.Cinema
 
 @{
     ViewData["Title"] = "Atualizar";
 }
+
+<h1>Atualizar Cinema @Model.Nome</h1>
+
+<h4>Ator</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CinemaAtualizar">
+        <form asp-action="Atualizar">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div>
                 <img class="img-thumbnail" src="@Model.LogoURL" />
@@ -15,6 +19,7 @@
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
+                <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
@@ -23,6 +28,7 @@
             <div class="form-group">
                 <label asp-for="LogoURL" class="control-label"></label>
                 <input asp-for="LogoURL" class="form-control" />
+                <span asp-validation-for="LogoURL" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
@@ -32,5 +38,5 @@
 </div>
 
 <div>
-    <a asp-action="CinemaListar">Cancelar</a>
+    <a asp-action="Index">Lista de Cinemas</a>
 </div>
