--- a/IngressoMVC/Views/Produtores/Atualizar.cshtml
+++ b/IngressoMVC/Views/Produtores/Atualizar.cshtml
@@ -1,13 +1,16 @@
-﻿<h1>Atualizar Ator</h1>
-@model IngressoMVC.Models.Ator
+﻿@model IngressoMVC.Models.Produtor
 
 @{
     ViewData["Title"] = "Atualizar";
 }
+
+<h1>Atualizar Produtor</h1>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AtorAtualizar">
+        <form asp-action="Atualizar">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div>
                 <img class="img-thumbnail" src="@Model.FotoPerfilURL" />
@@ -15,6 +18,7 @@
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
+                <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Bio" class="control-label"></label>
@@ -23,6 +27,7 @@
             <div class="form-group">
                 <label asp-for="FotoPerfilURL" class="control-label"></label>
                 <input asp-for="FotoPerfilURL" class="form-control" />
+                <span asp-validation-for="FotoPerfilURL" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
@@ -32,5 +37,5 @@
 </div>
 
 <div>
-    <a asp-action="AtorListar">Cancelar</a>
+    <a asp-action="Index">Lista de Produtores</a>
 </div>
